maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:3: error: ';' expected but '=' found.
  sx : Int = 0
           ^JediEscaper:4: error: ';' expected but '=' found.
  sy : Int = 0
           ^JediEscaper:11: error: ';' expected but ',' found.
      if (aBiscuit(x,y)) {x,y}
                           ^